kube/broad-fhir.yml
apiVersion: v1
kind: Service
metadata:
  name: fhir
spec:
  selector:
    app: fhir
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fhir
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fhir
  template:
    metadata:
      labels:
        app: fhir
    spec:
      containers:
        - name: fhir
          image: gcr.io/broad-fhir-dev/broad/fhir:f8a2410
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
        - name: tcga
          image: gcr.io/broad-fhir-dev/broad/tcga:f8a2410
          ports:
            - containerPort: 3001
          imagePullPolicy: Always
