kube/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: broad-fhir-loadbalancer
spec:
  selector:
    app: broad-fhir-deployment
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broad-fhir-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broad-fhir-deployment
  template:
    metadata:
      labels:
        app: broad-fhir-deployment
    spec:
      containers:
        - name: fhir
          image: gcr.io/broad-fhir-dev/broad/fhir:4fc5224
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
        - name: tcga
          image: gcr.io/broad-fhir-dev/broad/tcga:4fc5224
          ports:
            - containerPort: 3001
          imagePullPolicy: Always
